TriggersFrontend/target/release/build/crossbeam-utils-0f597932ee40d6eb/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
